--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -143,7 +143,9 @@ footer {
     padding: 16px 80px;
     color: #5B405F;
     font-size: 8px;
-    text-align: center;
+    /*text-align: center;*/
+    justify-content: center;
+    align-items: center;
 }
 
 /*INPUT SECTION/PAGE/CONTAINERS*/
