--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <header>
@@ -16,7 +16,9 @@
                       fill="#5B405F"/>
             </svg>
         </a>
-        <img src="/public/images/cupcakes-logo.png" alt="Cupcake" class="cupcake-logo">
+        <a href="shop_page.html">
+        <img src="/images/cupcakes-logo.png" alt="Cupcake" class="cupcake-logo" >
+        </a>
 
         <nav>
             <ul>
@@ -38,7 +40,7 @@
         <div class="hero-text">
             <h2>Bæredygtige.<br/>Dejlige.<br/>Fra Bornholm.</h2>
         </div>
-        <img src="/public/images/cupcake-hero.png" alt="cupcake-hero" class="hero-image"/>
+        <img src="/images/cupcake-hero.png" alt="cupcake-hero" class="hero-image"/>
     </section>
 
     <section class="content">
