Added new html page "product-page.html". Refactored everything in css and all html pages to snake_case, also, fixed html structure.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-
 <body>
-
 <header>
-    <div class="nav-container">
+    <div class="nav_container">
 
         <a href="index.html">
             <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,7 +19,7 @@
         </a>
 
         <a href="shop_page.html">
-        <img src="/images/cupcakes-logo.png" alt="Cupcake" class="cupcake-logo">
+        <img src="/images/cupcakes-logo.png" alt="Cupcake" class="cupcake_logo">
         </a>
 
         <nav>
@@ -43,30 +41,29 @@
 
 <main>
     <section class="hero">
-        <div class="hero-text">
+        <div class="hero_text">
             <h2>Bæredygtige.<br/>Dejlige.<br/>Fra Bornholm.</h2>
         </div>
-        <img src="/images/cupcake-hero.png" alt="cupcake-hero" class="hero-image"/>
+        <img src="/images/cupcake-hero.png" alt="cupcake-hero" class="hero_image"/>
     </section>
 
     <section class="content">
-        <div class="green-box"></div>
+        <div class="green_box"></div>
         <p>cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake
             propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
     </section>
 
     <section class="content">
-        <div class="green-box"></div>
+        <div class="green_box"></div>
         <p>cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake
             propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
     </section>
 
     <section class="content">
-        <div class="green-box"></div>
+        <div class="green_box"></div>
         <p>cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake
             propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
     </section>
-
 </main>
 
 <footer>
