--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -23,7 +23,7 @@ main {
 }
 
 /*NAVIGATION BAR*/
-.nav-container {
+.nav_container {
     width: 100%;
     height: 52px;
     background: #F7B9B9;
@@ -45,7 +45,7 @@ nav a {
     font-size: 12px;
 }
 
-.cupcake-logo {
+.cupcake_logo {
     height: 48px;
     display: block;
     position: absolute;
@@ -72,13 +72,13 @@ a svg:hover {
     gap: 2rem;
 }
 
-.hero-text h2 {
+.hero_text h2 {
     font-size: 1.8rem;
     font-weight: 800;
     line-height: 1.2;
 }
 
-.hero-image {
+.hero_image {
     width: 277px;
     height: 264px;
     background-color: #F7B9B9;
@@ -92,7 +92,7 @@ a svg:hover {
     box-shadow: inset -2px -4px 10px rgba(0, 0, 0, 0.3)
 }
 
-.about-image {
+.about_image {
     width: 277px;
     height: 264px;
     background-color: #F7B9B9;
@@ -119,7 +119,19 @@ a svg:hover {
     flex-direction: row-reverse;
 }
 
-.green-box {
+.product_content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    padding: 48px 80px;
+    flex-direction: row-reverse;
+}
+/*.product_content:nth-child(odd) {*/
+/*    flex-direction: row-reverse;*/
+/*}*/
+
+.green_box {
     width: 161px;
     height: 127px;
     background: #A3D9A5;
@@ -128,8 +140,20 @@ a svg:hover {
     transition: 2s;
 }
 
-.green-box:hover {
+.green_box:hover {
     transform: scale(1.3);
+}
+
+.green_box_counter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 110px;
+    height: 55px;
+    background: #A3D9A5;
+    border-radius: 10px;
+    flex-shrink: 0;
+    margin: 15% auto;
 }
 
 p {
@@ -138,12 +162,40 @@ p {
     max-width: 500px;
 }
 
+.dropdown_menu {
+    width: 145px;
+    height: 40px;
+    border-radius: 10px;
+    text-align: center;
+    color: #5B405F;
+    background: #C6E3BE url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'> <path d='M12 14.975C11.8667 14.975 11.7417 14.9543 11.625 14.913C11.5083 14.8717 11.4 14.8007 11.3 14.7L6.69999 10.1C6.51665 9.91665 6.42499 9.68332 6.42499 9.39999C6.42499 9.11665 6.51665 8.88332 6.69999 8.69999C6.88332 8.51665 7.11665 8.42499 7.39999 8.42499C7.68332 8.42499 7.91665 8.51665 8.09999 8.69999L12 12.6L15.9 8.69999C16.0833 8.51665 16.3167 8.42499 16.6 8.42499C16.8833 8.42499 17.1167 8.51665 17.3 8.69999C17.4833 8.88332 17.575 9.11665 17.575 9.39999C17.575 9.68332 17.4833 9.91665 17.3 10.1L12.7 14.7C12.6 14.8 12.4917 14.871 12.375 14.913C12.2583 14.955 12.1333 14.9757 12 14.975Z' fill='black'/></svg>") no-repeat right 10px;
+    padding-right: 25px;
+    padding-left: 10px;
+    border: none;
+    appearance: none;
+    -webkit-appearance: none;
+    font-size: 18px;
+    box-shadow: inset 0 2px 4px rgba(0,0,0, 0.5);
+    transition: all 0.3s ease;
+}
+
+.dropdown_menu:focus {
+    outline: 2px solid #5B405F;
+}
+
+/*.dropdown_menu option { ved ikke om den virker, bruger mac
+    background-color: #FDECEC;
+    color: #5B405F;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    border-radius: 15px;
+}*/
+
 footer {
     background: #F7B9B9;
     padding: 16px 80px;
     color: #5B405F;
     font-size: 8px;
-    /*text-align: center;*/
     justify-content: center;
     align-items: center;
 }
@@ -157,7 +209,7 @@ footer {
     font-weight: 700;
 }
 
-.input-container {
+.input_container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -168,7 +220,7 @@ footer {
 }
 
 /*SAME AS INPUT-CONTAINER (FOR EDIT PAGE)*/
-.edit-container {
+.edit_container {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -177,10 +229,9 @@ footer {
     min-height: 80vh;
     padding: 32px 16px;
     gap: 16px;
-    padding: 16px;
 }
 
-.edit-container-text {
+.edit_container_text {
     position: absolute;
     top: -0.1%;
     left: 50%;
@@ -193,15 +244,12 @@ footer {
     box-shadow: inset 0 -1px 4px rgba(0, 0, 0, 0.6);
 }
 
-form {
-    width: 391px;
+.save_cupcake_form {
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    gap: 16px;
-    background: #F7B9B9;
-    padding: 32px;
     border-radius: 10px;
-    box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 0 40% 2rem;
 }
 
 input {
@@ -237,7 +285,43 @@ button:hover {
     transform: scale(1.1);
 }
 
-.order-confirmation {
+.counter_button {
+    width: 2rem;
+    height: 30px;
+    border: none;
+    border-radius: 20px;
+    background: #5B405F;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.7s ease;
+    margin: 0 auto;
+}
+
+.product_page_button {
+    width: 6rem;
+    min-width: 6rem;
+}
+
+.product_page_cart {
+    width: 50px;
+    min-width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+.product_page_actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+.order_confirmation {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -249,7 +333,7 @@ button:hover {
 }
 
 /*CART SECTION*/
-.cart-container {
+.cart_container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -259,13 +343,13 @@ button:hover {
     gap: 16px;
 }
 
-.cart-item-name {
+.cart_item_name {
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
 }
 
-.cart-item {
+.cart_item {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
@@ -277,17 +361,17 @@ button:hover {
     transition: all 1s;
 }
 
-.cart-item:hover {
+.cart_item:hover {
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
     transition: 1s ease;
     transform: scale(1.02);
 }
 
-.cart-item span {
+.cart_item span {
     font-size: 14px;
 }
 
-.cart-container-right {
+.cart_container_right {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -295,7 +379,7 @@ button:hover {
     margin-top: 2rem;
 }
 
-#cart-title {
+#cart_title {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -306,7 +390,7 @@ button:hover {
 }
 
 /*BUTTONS SPECIFIC FOR cart.html*/
-.update-info-button {
+.update_info_button {
     text-align: center;
     text-decoration: none;
     align-content: center;
@@ -322,13 +406,13 @@ button:hover {
     transition: all 0.7s ease;
 }
 
-.update-info-button:hover {
+.update_info_button:hover {
     background-color: #4a324a;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transform: scale(1.05);
 }
 
-.checkout-button {
+.checkout_button {
     text-decoration: none;
     align-content: center;
     text-align: center;
@@ -345,7 +429,7 @@ button:hover {
     margin-top: 2rem;
 }
 
-.checkout-button:hover {
+.checkout_button:hover {
     background-color: #4a324a;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transform: scale(1.05);
