--- a/src/main/resources/templates/registerPassword.html
+++ b/src/main/resources/templates/registerPassword.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,6 +54,7 @@
             </form>
             <p>Har du allerede en konto? <a href="login.html">Log ind</a></p>
         </div>
+    </section>
 </main>
 
 <footer>
