big sprint collective work to controller html and mapper classes all realised to achieve a succession of atributes from our frontend to our database at a controled moment.

--- a/src/main/resources/templates/edit-info.html
+++ b/src/main/resources/templates/edit-info.html
@@ -40,7 +40,7 @@
     <section class="editInfo_section">
         <h1 id="title">Ændre Information</h1>
         <div class="edit_container"><span class="edit-container_text">Indtast Ændringer</span>
-            <form class="editInfo_form" th:action="@{/submit_edit}" method="POST">
+            <form class="editInfo_form" th:action="@{/edit-info}" method="POST">
 
                 <label for="first_name">Indtast Fornavn:</label>
                 <input type="text" id="first_name" name="first_name"/>
