fix propper instanciating of classes worked upon most controler some mapper and html.  fixed paths and endpoints. the final form is almost achieved the only problem is that the currentUser sesh atrb is nul. a propper readthrough and review is needed but base logic is showing promise and fixes our current issues

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@
         <h1 id="title">Log ind</h1>
 
         <div class="input_container">
-            <form class="login_form" th:action="@{/}" method="POST">
+            <form class="login_form" th:action="@{/login}" method="POST">
                 <label for="username">Brugernavn:</label>
                 <input type="text" id="username" name="username" required/>
 
