--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a th:href="@{/}">Hjem</a></li>
                 <li><a th:href="@{/about}">Om os</a></li>
-                <li><a th:href="@{/login}">Login</a></li>
+                <li><a th:href="@{/login}" th:if="${currentUser == null}">Login</a></li>
             </ul>
         </nav>
 
