--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <header>
@@ -44,11 +44,11 @@
 
         <div class="input_container">
             <form class="login_form" th:action="@{/login}" method="POST">
-                <label for="username">Brugernavn:</label>
-                <input type="text" id="username" name="username" required/>
+                <label for="email">e-mail:</label>
+                <input type="email" id="email" name="email"  value="ex@tv.dk" required/>
 
                 <label for="password">Adgangskode:</label>
-                <input type="password" id="password" name="password" required/>
+                <input type="password" id="password" name="password" value="1234" required/>
 
                 <button type="submit">Log ind</button>
             </form>
