--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -336,11 +336,12 @@ button:hover {
 .cart_container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 80vh;
+    align-items: start;
+    /*justify-content: center;*/
+    /*min-height: 80vh;*/
     padding: 32px 16px;
     gap: 16px;
+    margin-top: 20px;
 }
 
 .cart_item_name {
