--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -43,16 +43,17 @@
             <a th:href="@{/edit-info}" class="update_info_button">Opdater Info</a>
         </h1>
 
+
         <div class="cart_container">
-            <div th:each="cupcakeInOrder : ${cupcakeInOrders}" class="cart_item">
+            <div th:each="cupcakeInOrder : ${session.cupcakeInOrder}" class="cart_item">
                 <span class="cart_item_name" th:text="${cupcakeInOrder.udc.bottom.bottomName}">Bund</span>
                 <span class="cart_item_price" th:text="${cupcakeInOrder.udc.bottom.bottomPrice}">Bund Pris</span>
-                <h1> juhuuu </h1>
                 <span class="cart_item_name" th:text="${cupcakeInOrder.udc.icing.icingName}">Icing</span>
                 <span class="cart_item_price" th:text="${cupcakeInOrder.udc.icing.icingPrice}">Icing Pris</span>
                 <span class="cart_amount_quantity" th:text="${cupcakeInOrder.amount}">Antal</span>
             </div>
         </div>
+
             <p>Leveringsdato: 20/11/2025</p>
             <p>Leveringsadresse: Pederskervejen 17, 3730 Nexø</p>
             <p>Leveringstidspunkt: 14:00 - 16:00</p>
