--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -40,7 +40,7 @@
 <main>
     <div class="cart_container_left">
         <h1 id="cart_title">Din Kurv
-            <a th:href="@{/edit-info}" class="update_info_button">Opdater Info</a>
+            <a th:href="@{/registerInfo}" class="update_info_button">Opdater Info</a>
         </h1>
 
 
