--- a/src/main/resources/templates/adminPages/adminIndex.html
+++ b/src/main/resources/templates/adminPages/adminIndex.html
@@ -23,12 +23,13 @@
 
         <nav>
             <ul>
-                <li><a th:href="@{index.html}">Hjem</a></li>
-                <li><a th:href="@{about.html}">Om os</a></li>
+                <li><a th:href="@{/}">Hjem</a></li>
+                <li><a th:href="@{/about}">Om os</a></li>
+                <li th:if="${admin == true }"><a th:href="@{/adminIndex}">Admin</a></li>
             </ul>
         </nav>
 
-        <a th:href="@{cart.html}">
+        <a th:href="@{/cart}">
             <svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1.719 4.05125e-08C1.45378 0.037263 1.21423 0.178357 1.05304 0.392242C0.891854 0.606127 0.822233 0.875283 0.859496 1.1405C0.896759 1.40572 1.03785 1.64527 1.25174 1.80646C1.46562 1.96764 1.73478 2.03726 2 2H5.469C6.043 2 6.226 2.115 6.375 2.25C6.524 2.385 6.71 2.657 6.875 3.219L11.563 19.156C11.5714 19.1878 11.5815 19.2192 11.593 19.25C11.593 19.25 12.704 22 15.5 22H23.344C23.6092 22 23.8636 21.8946 24.0511 21.7071C24.2386 21.5196 24.344 21.2652 24.344 21C24.344 20.7348 24.2386 20.4804 24.0511 20.2929C23.8636 20.1054 23.6092 20 23.344 20H15.5C14.025 20 13.437 18.5 13.437 18.5L13.281 18H21.406C22.436 18 22.902 17.136 23 16.812L26.594 9.094C27.15 7.76 26.859 6 24.812 6H10.312C10.146 6 9.961 6.042 9.782 6.094C9.422 4.871 8.854 2.904 8.782 2.656C8.572 1.943 8.292 1.269 7.719 0.75C7.146 0.231 6.349 4.05125e-08 5.469 4.05125e-08H2C1.96868 -0.00147344 1.93731 -0.00147344 1.906 4.05125e-08C1.87468 -0.00147344 1.84331 -0.00147344 1.812 4.05125e-08C1.78135 -0.00141137 1.75065 -0.00141137 1.72 4.05125e-08H1.719ZM10.625 8.063H14.844V9.843H11.188L10.718 8.343C10.686 8.233 10.638 8.139 10.625 8.063ZM16.156 8.063H18.844V9.843H16.156V8.063ZM20.156 8.063H24.781C24.7687 8.13778 24.7479 8.21092 24.719 8.281L24 9.844H20.156V8.063ZM11.594 11.156H14.844V12.844H12.125L11.594 11.156ZM16.156 11.156H18.844V12.844H16.156V11.156ZM20.156 11.156H23.375L22.594 12.844H20.156V11.156ZM12.531 14.156H14.844V15.937H13.188C13.148 15.937 13.126 15.924 13.094 15.907L12.531 14.156ZM16.156 14.156H18.844V15.937H16.156V14.156ZM20.156 14.156H22L21.156 15.937H20.156V14.156ZM15 22.187C14.5193 22.187 14.0583 22.378 13.7184 22.7179C13.3785 23.0578 13.1875 23.5188 13.1875 23.9995C13.1875 24.4802 13.3785 24.9412 13.7184 25.2811C14.0583 25.621 14.5193 25.812 15 25.812C15.4807 25.812 15.9417 25.621 16.2816 25.2811C16.6215 24.9412 16.8125 24.4802 16.8125 23.9995C16.8125 23.5188 16.6215 23.0578 16.2816 22.7179C15.9417 22.378 15.4807 22.187 15 22.187ZM21 22.187C20.5193 22.187 20.0583 22.378 19.7184 22.7179C19.3785 23.0578 19.1875 23.5188 19.1875 23.9995C19.1875 24.4802 19.3785 24.9412 19.7184 25.2811C20.0583 25.621 20.5193 25.812 21 25.812C21.4807 25.812 21.9417 25.621 22.2816 25.2811C22.6215 24.9412 22.8125 24.4802 22.8125 23.9995C22.8125 23.5188 22.6215 23.0578 22.2816 22.7179C21.9417 22.378 21.4807 22.187 21 22.187Z"
                       fill="#5B405F"/>
@@ -38,22 +39,76 @@
 </header>
 
 <main>
-    <section class="pay_section">
-        <h1 id="title">Du har handlet for xxx</h1>
-        <div class="input_container">
-            <form class="pay_form" th:action="@{/order-confirmation}" method="POST">
+    <section class="admin_section">
+        <div class="admin_container">
+            <h1>Hej XXXX<br/>Velkommen til!</h1>
+            <h2>Dagens ord er XXXX</h2>
+        </div>
 
-                <label for="card_number">Kortnummer:</label>
-                <input type="text" id="card_number" name="card_number" required />
+        <div class="dashboard_grid">
 
-                <label for="card_date">Dato:</label>
-                <input type="month" id="card_date" name="card_date" placeholder="MM/ÅÅ" required />
+            <div class="dashboard_row">
+                <div class="dashboard_card sales_today">
+                    <p><strong>Dagens</strong><br/>salgstal</p>
+                </div>
 
-                <label for="card_cvc">CVC:</label>
-                <input type="text" id="card_cvc" name="card_cvc" required />
+                <div class="dashboard_card upcoming_orders">
+                    <div class="card_header">Kommende Ordrer</div>
+                    <ul class="card_list">
+                        <li>Ordre #1234 - 15/10/2025</li>
+                        <li>Ordre #1235 - 16/10/2025</li>
+                        <li>Ordre #1236 - 17/10/2025</li>
+                    </ul>
+                </div>
+            </div>
 
-                <button type="submit" th:action="@{/apply_discount}">Bekræft</button>
+            <div class="dashboard_row1">
+                <div class="dashboard_card top_customers">
+                    <div class="card_header">Kunder med flest ordrer</div>
+                    <ul class="card_list">
+                        <li>Anna Hansen - 12 ordrer</li>
+                        <li>Peter Jensen - 10 ordrer</li>
+                        <li>Lise Sørensen - 9 ordrer</li>
+                    </ul>
+                </div>
+
+
+                <div class="dashboard_card sales_period">
+                    <p><strong>Periodens</strong><br/>Salgstal</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="dashboard_buttons">
+            <a th:href="@{/admin-customer-page}">
+            <button>Se Kunder</button>
+            </a>
+
+            <a th:href="@{/admin-order-page}">
+            <button>Se Ordrer</button>
+            </a>
+        </div>
+
+        <div class="gift_card">
+            <p><strong>Giv et Gavekort!</strong></p>
+            <div class="gift_inputs">
+                <input type="text" placeholder="Kunde"/>
+                <input type="number" placeholder="Beløb"/>
+
+            <form class="gift_card" th:action="@{/insertMoney}" method="POST">
+                <label for="amount">amount:</label>
+                <input type="amount" id="amount" name="amount" value="200" required/>
+
+                <label for="email">email:</label>
+                <input type="email" id="email" name="email" value="ex@tv.dk" required/>
+
+                <button type="submit">Log ind</button>
             </form>
+
+
+            </div>
+            <button class="send_gift">Send Gavekort</button>
         </div>
     </section>
 </main>
