--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,8 @@
             <ul>
                 <li><a th:href="@{/}">Hjem</a></li>
                 <li><a th:href="@{/about}">Om os</a></li>
-                <li><a th:href="@{/login}" th:if="${currentUser == null}">Login</a></li>
+                <li><a th:href="@{/login}" th:if="${session.currentUser == null}">Login</a></li>
+                <li><a th:href="@{/adminIndex}" th:if="${session.admin == true}">Admin</a></li>
             </ul>
         </nav>
 
