--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,8 +23,8 @@
 
         <nav>
             <ul>
-                <li><a th:href="@{index.html}">Hjem</a></li>
-                <li><a th:href="@{about.html}">Om os</a></li>
+                <li><a th:href="@{/}">Hjem</a></li>
+                <li><a th:href="@{/about}">Om os</a></li>
             </ul>
         </nav>
 
@@ -54,6 +54,7 @@
             </form>
             <p>Har du ikke en konto? <a th:href="@{/registerPassword}">Opret en her</a></p>
         </div>
+    </section>
 </main>
 
 <footer>
