--- a/src/main/resources/templates/registerInfo.html
+++ b/src/main/resources/templates/registerInfo.html
@@ -51,8 +51,8 @@
                 <label for="last_name">Indtast Efternavn:</label>
                 <input type="text" id="last_name" name="last_name" required />
 
-                <label for="postcode">Indtast Postnummer:</label>
-                <input type="text" id="postcode" name="postcode" required />
+                <label for="post_code">Indtast Postnummer:</label>
+                <input type="text" id="post_code" name="post_code" required />
 
                 <label for="street_name">Vejnavn:</label>
                 <input type="text" id="street_name" name="street_name" required />
