smoothest implementation of a feature, todays sales is now shown on the admin page :)

--- a/src/main/resources/templates/adminPages/adminIndex.html
+++ b/src/main/resources/templates/adminPages/adminIndex.html
@@ -49,7 +49,7 @@
 
             <div class="dashboard_row">
                 <div class="dashboard_card sales_today">
-                    <p><strong>Dagens</strong><br/>salgstal</p>
+                    <p>Dagens salgstal !  <span th:text="${today_sales}">0</span></p>
                 </div>
 
                 <div class="dashboard_card upcoming_orders">
