Raw code for finding the top 3 most active users

--- a/src/main/resources/templates/registerInfo.html
+++ b/src/main/resources/templates/registerInfo.html
@@ -52,7 +52,7 @@
                 <input type="text" id="last_name" name="last_name" required />
 
                 <label for="postcode">Indtast Postnummer:</label>
-                <input type="text" id="postcode" name="postcode" required />
+                <input type="text" id="postcode" name="post_code" required />
 
                 <label for="street_name">Vejnavn:</label>
                 <input type="text" id="street_name" name="street_name" required />
