--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -580,15 +580,25 @@ button:hover {
 }
 
 .card_header {
+
     font-weight: 800;
     font-size: 20px;
     margin-bottom: 8px;
+
+
 }
 
 .card_list {
+
     list-style: none;
     width: 100%;
     padding-left: 0;
+    height: 100%;
+    max-height: 80%;  /* Change to fit your design */
+    overflow-y: auto;   /* Makes the list scrollable vertically */
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+
+
 }
 
 .card_list li {
@@ -698,7 +708,7 @@ button:hover {
 
 .card_list, .list_rows li {
     padding: 2%;
-    max-height: 3rem;
+    max-height: 100%;
     justify-content: center;
     max-width: 90%;
 }
