--- a/src/main/resources/templates/registerInfo.html
+++ b/src/main/resources/templates/registerInfo.html
@@ -67,6 +67,7 @@
             </form>
             <p>Har du allerede en konto? <a th:href="@{/login}" th:if="${session.currentUser == null}" >Log ind</a></p>
         </div>
+        </section>
 </main>
 
 <footer>
